<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="24dp">

        <EditText
            android:id="@+id/etRoomName"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:hint="@string/room_name" />

        <EditText
            android:id="@+id/etRoomType"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="12dp"
            android:hint="@string/room_type" />

        <EditText
            android:id="@+id/etLength"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="12dp"
            android:hint="@string/length"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etWidth"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="12dp"
            android:hint="@string/width"
            android:inputType="numberDecimal" />

        <EditText
            android:id="@+id/etHeight"
            android:layout_width="match_parent"
            android:layout_height="90dp"
            android:layout_marginTop="12dp"
            android:hint="@string/height"
            android:inputType="numberDecimal" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="match_parent"
            android:layout_height="75dp"
            android:layout_marginTop="20dp"
            android:text="@string/save" />

    </LinearLayout>

</ScrollView>

